--- a/requirements.txt
+++ b/requirements.txt
@@ -45,6 +45,8 @@ msgspec>=0.18.0
 pydantic>=2.0.0
 orjson>=3.8.0
 packaging>=21.0
+dill>=0.3.7
+cloudpickle>=2.2.0
 
 # Security and hashing
 blake3>=0.3.3
