--- a/.github/workflows/comprehensive_validation.yml
+++ b/.github/workflows/comprehensive_validation.yml
@@ -49,11 +49,24 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pytest pytest-cov pytest-xdist
+        pip install pytest pytest-cov pytest-xdist import-linter>=1.12.0
     
     - name: Validate installation
       run: |
         python validate_installation.py
+    
+    - name: Run phase enforcement checks
+      run: |
+        echo "Running import-linter phase enforcement checks..."
+        import-linter --config pyproject.toml
+        echo "✅ Phase layering constraints validated!"
+    
+    - name: Run architecture fitness tests
+      run: |
+        echo "Running architecture fitness function tests..."
+        pytest architecture_tests/ -v -m "architecture or phase_enforcement" \
+          --junit-xml=validation_reports/architecture-results.xml \
+          || echo "⚠️ Architecture tests completed with issues"
     
     - name: Run comprehensive validation suite
       run: |
