--- a/requirements.txt
+++ b/requirements.txt
@@ -140,6 +140,10 @@ kafka-python>=2.0.2
 # Data validation
 hypothesis>=6.82.0
 
+# Mutation testing
+mutmut>=2.4.3
+cosmic-ray>=8.3.6
+
 # Additional utilities
 setuptools>=68.0.0
 pillow>=10.0.0
