--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,21 +12,57 @@ repos:
     rev: v0.6.4
     hooks:
       - id: ruff
-        args: ["--fix"]
+        name: Ruff linting
+        args: ["--config", "pyproject.toml", "--fix"]
+        files: ^(egw_query_expansion|scripts|tools)/.*\.py$
+        exclude: ^(venv|\.git|__pycache__|build|dist|\.pytest_cache|\.mypy_cache|examples|tests)/.*
       - id: ruff-format
+        name: Ruff formatting
+        files: ^(egw_query_expansion|scripts|tools)/.*\.py$
+        exclude: ^(venv|\.git|__pycache__|build|dist|\.pytest_cache|\.mypy_cache|examples|tests)/.*
+  
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.11.2
     hooks:
       - id: mypy
-        args: ["--strict", "--python-version=3.11", "--namespace-packages", "--package", "tu_paquete"]
-        additional_dependencies: []
-  - repo: https://github.com/pytest-dev/pytest
-    rev: v8.3.3
-    hooks:
-      - id: pytest
-        additional_dependencies: []
+        name: MyPy type checking
+        args: ["--strict", "--config-file", "mypy.ini", "--show-error-codes"]
+        files: ^egw_query_expansion/.*\.py$
+        exclude: ^(tests|examples)/.*\.py$
+        additional_dependencies: [
+          "types-requests", 
+          "types-PyYAML", 
+          "types-setuptools",
+          "types-redis",
+          "pydantic",
+          "numpy",
+          "torch",
+          "transformers",
+        ]
+  
   - repo: local
     hooks:
+      - id: no-star-imports
+        name: Detect star imports
+        entry: python scripts/check_star_imports.py
+        language: system
+        files: ^egw_query_expansion/.*\.py$
+        pass_filenames: true
+        
+      - id: circular-imports-check
+        name: Check for circular imports
+        entry: python scripts/check_circular_imports.py
+        language: system
+        files: ^egw_query_expansion/.*\.py$
+        pass_filenames: true
+        
+      - id: type-checking-imports
+        name: Validate type checking imports
+        entry: python scripts/validate_type_imports.py
+        language: system
+        files: ^egw_query_expansion/.*\.py$
+        pass_filenames: true
+        
       - id: pipeline-component-annotations
         name: Validate Pipeline Component Annotations
         entry: python3 scripts/pre_commit_hook.py
@@ -34,3 +70,12 @@ repos:
         files: \.py$
         exclude: ^(test_.*|.*test\.py|__init__\.py)$
         pass_filenames: false
+        
+  - repo: https://github.com/pytest-dev/pytest
+    rev: v8.3.3
+    hooks:
+      - id: pytest
+        name: Run tests
+        args: ["egw_query_expansion/tests/", "-v", "--tb=short"]
+        pass_filenames: false
+        additional_dependencies: ["pytest-cov"]
