--- a/requirements.txt
+++ b/requirements.txt
@@ -45,6 +45,16 @@ pytest-cov>=4.0.0
 jupyter>=1.0.0
 pre-commit>=3.6.0
 
+# Static analysis tools
+mypy>=1.7.0
+ruff>=0.6.4
+black>=23.0.0
+isort>=5.12.0
+types-requests>=2.31.0
+types-PyYAML>=6.0.0
+types-setuptools>=68.0.0
+types-redis>=4.6.0
+
 # Optimization and constraint solving
 z3-solver>=4.12.0
 
