--- a/requirements.txt
+++ b/requirements.txt
@@ -55,6 +55,9 @@ types-PyYAML>=6.0.0
 types-setuptools>=68.0.0
 types-redis>=4.6.0
 
+# Architecture enforcement
+import-linter>=1.12.0
+
 # Optimization and constraint solving
 z3-solver>=4.12.0
 
