--- a/mypy.ini
+++ b/mypy.ini
@@ -1,140 +1,180 @@
 [mypy]
-python_version = 3.9
-strict = True
+# Strict mode settings
+strict = true
+disallow_untyped_defs = true
+disallow_any_generics = true
+warn_return_any = true
 
-# Strict type checking options
-disallow_untyped_defs = True
-disallow_untyped_calls = True
-disallow_incomplete_defs = True
-disallow_untyped_decorators = True
-warn_return_any = True
-warn_unused_ignores = True
-warn_redundant_casts = True
-warn_unreachable = True
-strict_optional = True
-strict_equality = True
-no_implicit_reexport = True
-show_error_codes = True
-show_column_numbers = True
-check_untyped_defs = True
-disallow_any_generics = True
-disallow_subclassing_any = True
+# Additional strict settings
+disallow_untyped_calls = true
+disallow_incomplete_defs = true
+check_untyped_defs = true
+disallow_untyped_decorators = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+warn_unreachable = true
+strict_equality = true
+strict_concatenate = true
 
 # Import handling
-ignore_missing_imports = False
 follow_imports = normal
-mypy_path = egw_query_expansion
-packages = egw_query_expansion
+ignore_missing_imports = false
+namespace_packages = true
 
-# Exclude directories
-exclude = (?x)(
-    ^venv/
-    | ^\.git/
-    | ^__pycache__/
-    | ^build/
-    | ^dist/
-    | ^\.pytest_cache/
-    | ^\.mypy_cache/
-    | ^examples/
-    | ^tests/
-)
+# Error format
+show_error_codes = true
+show_column_numbers = true
+pretty = true
+color_output = true
 
-# Third-party dependencies with missing stubs
+# Cache
+cache_dir = .mypy_cache
+sqlite_cache = true
+
+# Python version
+python_version = 3.8
+
+# Per-module overrides for external dependencies
 [mypy-POT.*]
-ignore_missing_imports = True
+ignore_missing_imports = true
 
 [mypy-faiss.*]
-ignore_missing_imports = True
+ignore_missing_imports = true
+
+[mypy-transformers.*]
+ignore_missing_imports = true
+
+[mypy-sentence_transformers.*]
+ignore_missing_imports = true
+
+[mypy-torch.*]
+ignore_missing_imports = true
+
+[mypy-sklearn.*]
+ignore_missing_imports = true
+
+[mypy-scipy.*]
+ignore_missing_imports = true
+
+[mypy-ot.*]
+ignore_missing_imports = true
+
+[mypy-datasets.*]
+ignore_missing_imports = true
 
 [mypy-beir.*]
-ignore_missing_imports = True
-
-[mypy-pyserini.*]
-ignore_missing_imports = True
-
-[mypy-pm4py.*]
-ignore_missing_imports = True
-
-[mypy-deap.*]
-ignore_missing_imports = True
-
-[mypy-gudhi.*]
-ignore_missing_imports = True
-
-[mypy-ripser.*]
-ignore_missing_imports = True
+ignore_missing_imports = true
 
 [mypy-spacy.*]
-ignore_missing_imports = True
+ignore_missing_imports = true
 
 [mypy-nltk.*]
-ignore_missing_imports = True
+ignore_missing_imports = true
 
-[mypy-gensim.*]
-ignore_missing_imports = True
+[mypy-plotly.*]
+ignore_missing_imports = true
+
+[mypy-matplotlib.*]
+ignore_missing_imports = true
+
+[mypy-seaborn.*]
+ignore_missing_imports = true
 
 [mypy-z3.*]
-ignore_missing_imports = True
+ignore_missing_imports = true
 
-[mypy-PIL.*]
-ignore_missing_imports = True
+[mypy-orjson.*]
+ignore_missing_imports = true
 
-[mypy-cv2.*]
-ignore_missing_imports = True
-
-[mypy-fitz.*]
-ignore_missing_imports = True
-
-[mypy-camelot.*]
-ignore_missing_imports = True
-
-[mypy-easyocr.*]
-ignore_missing_imports = True
-
-[mypy-pytesseract.*]
-ignore_missing_imports = True
-
-[mypy-tabula.*]
-ignore_missing_imports = True
-
-[mypy-ray.*]
-ignore_missing_imports = True
-
-[mypy-kafka.*]
-ignore_missing_imports = True
-
-[mypy-kubernetes.*]
-ignore_missing_imports = True
-
-[mypy-redis.*]
-ignore_missing_imports = True
-
-[mypy-consul.*]
-ignore_missing_imports = True
-
-[mypy-whoosh.*]
-ignore_missing_imports = True
-
-[mypy-elasticsearch.*]
-ignore_missing_imports = True
+[mypy-msgspec.*]
+ignore_missing_imports = true
 
 [mypy-blake3.*]
-ignore_missing_imports = True
+ignore_missing_imports = true
+
+[mypy-google.*]
+ignore_missing_imports = true
+
+[mypy-redis.*]
+ignore_missing_imports = true
+
+[mypy-httpx.*]
+ignore_missing_imports = true
+
+[mypy-loguru.*]
+ignore_missing_imports = true
+
+[mypy-rich.*]
+ignore_missing_imports = true
+
+[mypy-pyserini.*]
+ignore_missing_imports = true
+
+[mypy-pm4py.*]
+ignore_missing_imports = true
+
+[mypy-deap.*]
+ignore_missing_imports = true
+
+[mypy-gudhi.*]
+ignore_missing_imports = true
+
+[mypy-ripser.*]
+ignore_missing_imports = true
+
+[mypy-gensim.*]
+ignore_missing_imports = true
+
+[mypy-PIL.*]
+ignore_missing_imports = true
+
+[mypy-cv2.*]
+ignore_missing_imports = true
+
+[mypy-fitz.*]
+ignore_missing_imports = true
+
+[mypy-camelot.*]
+ignore_missing_imports = true
+
+[mypy-easyocr.*]
+ignore_missing_imports = true
+
+[mypy-pytesseract.*]
+ignore_missing_imports = true
+
+[mypy-tabula.*]
+ignore_missing_imports = true
+
+[mypy-ray.*]
+ignore_missing_imports = true
+
+[mypy-kafka.*]
+ignore_missing_imports = true
+
+[mypy-kubernetes.*]
+ignore_missing_imports = true
+
+[mypy-consul.*]
+ignore_missing_imports = true
+
+[mypy-whoosh.*]
+ignore_missing_imports = true
+
+[mypy-elasticsearch.*]
+ignore_missing_imports = true
 
 [mypy-dill.*]
-ignore_missing_imports = True
+ignore_missing_imports = true
 
 [mypy-cloudpickle.*]
-ignore_missing_imports = True
+ignore_missing_imports = true
 
 [mypy-prometheus_client.*]
-ignore_missing_imports = True
+ignore_missing_imports = true
 
 [mypy-opentelemetry.*]
-ignore_missing_imports = True
-
-[mypy-google.cloud.*]
-ignore_missing_imports = True
+ignore_missing_imports = true
 
 [mypy-hypothesis.*]
-ignore_missing_imports = True
+ignore_missing_imports = true
