--- a/requirements.txt
+++ b/requirements.txt
@@ -142,6 +142,9 @@ toml>=0.10.2
 prometheus-client>=0.17.0
 opentelemetry-api>=1.20.0
 opentelemetry-sdk>=1.20.0
+opentelemetry-exporter-otlp>=1.20.0
+opentelemetry-instrumentation>=0.41b0
+opentelemetry-instrumentation-logging>=0.41b0
 loguru>=0.7.0
 rich>=13.5.0
 
