--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ networkx>=3.1.0
 matplotlib>=3.7.0
 seaborn>=0.12.0
 plotly>=5.15.0
+graphviz>=0.20.0
 
 # Evaluation and benchmarking
 beir>=2.0.0
