Implement secure code execution wrappers, replace pickle serialization, and add Bandit security scanning to CI pipeline

--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -67,8 +67,42 @@ jobs:
       
     - name: Run Bandit security analysis
       run: |
-        bandit -r egw_query_expansion/ src/ scripts/ -f json -o bandit-report.json
-        bandit -r egw_query_expansion/ src/ scripts/ -f txt
+        # Create Bandit configuration for enhanced security scanning
+        cat > .bandit << EOF
+        [bandit]
+        exclude_dirs = ["/tests", "/test", "/.git", "/venv", "/.venv"]
+        skips = []
+        tests = ["B101", "B102", "B103", "B104", "B105", "B106", "B107", "B108", "B110", "B112", "B201", "B301", "B302", "B303", "B304", "B305", "B306", "B307", "B308", "B309", "B310", "B311", "B312", "B313", "B314", "B315", "B316", "B317", "B318", "B319", "B320", "B321", "B322", "B323", "B324", "B325", "B401", "B402", "B403", "B404", "B405", "B406", "B407", "B408", "B409", "B410", "B411", "B412", "B413", "B501", "B502", "B503", "B504", "B505", "B506", "B507", "B601", "B602", "B603", "B604", "B605", "B606", "B607", "B608", "B609", "B610", "B611", "B701", "B702", "B703"]
+        EOF
+        
+        # Run Bandit with comprehensive security checks
+        bandit -r egw_query_expansion/ src/ scripts/ . -c .bandit -f json -o bandit-report.json || BANDIT_EXIT_CODE=$?
+        bandit -r egw_query_expansion/ src/ scripts/ . -c .bandit -f txt -o bandit-report.txt || true
+        
+        # Display the text report
+        cat bandit-report.txt
+        
+        # Check for high severity issues that should fail the build
+        HIGH_SEVERITY=$(jq -r '.results[] | select(.issue_severity == "HIGH") | length' bandit-report.json | wc -l)
+        MEDIUM_SEVERITY=$(jq -r '.results[] | select(.issue_severity == "MEDIUM") | length' bandit-report.json | wc -l)
+        
+        echo "High severity issues: $HIGH_SEVERITY"
+        echo "Medium severity issues: $MEDIUM_SEVERITY"
+        
+        # Fail build on high severity issues
+        if [ "$HIGH_SEVERITY" -gt 0 ]; then
+          echo "❌ Build failed due to $HIGH_SEVERITY high severity security issues"
+          echo "Please review and fix all high severity security vulnerabilities"
+          exit 1
+        fi
+        
+        # Warn about medium severity issues but don't fail build
+        if [ "$MEDIUM_SEVERITY" -gt 0 ]; then
+          echo "⚠️ Warning: $MEDIUM_SEVERITY medium severity security issues found"
+          echo "Consider reviewing and addressing these issues"
+        fi
+        
+        echo "✅ Bandit security scan completed successfully"
       continue-on-error: false
       
     - name: Run import validation
@@ -86,7 +120,10 @@ jobs:
       if: always()
       with:
         name: bandit-report-${{ matrix.python-version }}
-        path: bandit-report.json
+        path: |
+          bandit-report.json
+          bandit-report.txt
+          .bandit
         
     - name: Fail on any static analysis violations
       if: failure()
